Bump scanned_dir_count even if dir cannot be read

This allows the --debug output to follow the actual order of the
directories specified in the path.

  $ PKG_CONFIG_PATH=/nosuch1:/nosuch2:/dir-with-foo.pc
  $ pkg-config --debug foo
  [...]
  Path position of 'foo' is 1

With this change, the path position above would be 3, matching the
position in PKG_CONFIG_PATH.

Freedesktop #80380 (https://bugs.freedesktop.org/show_bug.cgi?id=80380)